A.F....... [ZBXNEXT-1426] added initial Persian translation (Richlv)
A.F....... [ZBXNEXT-1447] added initial Finnish translation (Richlv)
........S. [ZBX-5525] renamed macro {TRIGGER.COMMENT} to {TRIGGER.DESCRIPTION} (Sasha)

Bug fixes:
........S. [ZBX-5791] fixed possible SQL errors when linking groups to a host (Sasha)
..F....... [ZBX-5786] fixed screens import, that contain simple graphs or plain texts (Oleg)
........S. [ZBX-5753] fixed server crash when using an icmpping* check as a discovery rule (Sasha)
...G...... [ZBX-5382] fixed agent crash on HP-UX Itanium; thanks to Alice Ferrazzi (Andris)
...G...... [ZBX-5289] fixed agent crash on Solaris; thanks to Jairo Eduardo Lopez Fuentes Nacarino, Takanori Suzuki (Andris)
..F....... [ZBX-5744] removed redundant HTML from the map monitoring page (Eduard, Pavels)
A......... [ZBX-5744] fixed script.getscriptsbyhost returning an unnecessary array of hosts for each script (Eduard, Pavels)
..F....... [ZBX-5811] fixed no permissions error when change user group "status", "frontend access" and "debug mode" using link in user groups list (Oleg)
A......... [ZBX-5751] fixed CDiscoveryRule get() and CItemPrototype get() "selectGraphs" parameter (Oleg)
..F....... [ZBX-5667] fixed host screen defined in template does not show item data for "Plain text" elements (Toms)
..F....... [ZBX-5762] fixed undefined indexes in graph prototype form (Oleg)
....I..... [ZBX-5125] fixed possible SQL errors while upgrading DB (dimir, Sasha)
....I..... [ZBX-5415] fixed check for PostgreSQL dev libraries (Sasha)
A......... [ZBX-5740] removed "discoveryids" parameter from CItem, CTrigger and CGraph get() methods (Toms)
A......... [ZBX-5740] fixed CItemPrototype parameter "selectTriggers" not working (Toms)
A......... [ZBX-5111] fixed child trigger data reset after changes in parent trigger (Oleg)
A......... [ZBX-5742] fixed trigger order_result in item and item prototype (Oleg)