@@ -58,6 +58,7 @@ A.F....... [ZBXNEXT-1447] added initial Finnish translation (Richlv)
 ........S. [ZBX-5525] renamed macro {TRIGGER.COMMENT} to {TRIGGER.DESCRIPTION} (Sasha)
 
 Bug fixes:
+..F....... [ZBX-5821] fixed 2.0 xml format template import (Oleg)
 ........S. [ZBX-5791] fixed possible SQL errors when linking groups to a host (Sasha)
 ..F....... [ZBX-5786] fixed screens import, that contain simple graphs or plain texts (Oleg)
 ........S. [ZBX-5753] fixed server crash when using an icmpping* check as a discovery rule (Sasha)
